--- a/css.css
+++ b/css.css
@@ -1,18 +1,23 @@
+body{
+	margin:0px;
+}
+
 .navigation{
-	width:1200px;
+	position:fixed;
+	width:100%;
 	height:50px;
-	background-color:#6D6968;
+	background-color:#585858;
 	border: black solid 2px;
-	margin:0px auto 0px auto;
+	margin:-55px auto 0px auto;
 }
 
 .main{
-	width:1100px;
-	height:300px;
+	width:900px;
+	height:6010px;
 	background-color:#fff;
 	border: black solid 2px;
 	border-top:none;
-	margin:0px auto 0px auto;
+	margin:55px auto 0px auto;
 	padding:50px;
 }
 
@@ -50,9 +55,11 @@ p.normal{
 }
 .button {
 	height:100%;
-	width:25%;
+	width:%;
+	margin-left:0.1%;
+	margin-right:0.1%;
+	background-color:#352D2D;
 	float:left;
-	color:
 	
 }
 .button p{
